# University-projects

./: README.md
Semester 1 /Fundamentals of programming /Assignment 10/: ui.py
Semester 1 /Fundamentals of programming /Assignment 5/: program.py
Semester 1 /Fundamentals of programming /Assignment 6/: ui.py
Semester 1 /Fundamentals of programming /Assignment 7 /src/ui/: start.py
Semester 1 /Fundamentals of programming /Assignment 8/src/repository/: discipline_repo.py
Semester 1 /Fundamentals of programming/ASSIGNMENT 10/: board.py
Semester 1 /Fundamentals of programming/ASSIGNMENT 6/src/: functions.py  start.py
Semester 1 /Fundamentals of programming/ASSIGNMENT 7/src/domain/: __init__.py
Semester 1 /Fundamentals of programming/ASSIGNMENT 7/src/repository/: __init__.py
Semester 1 /Fundamentals of programming/ASSIGNMENT 8/src/repository/: grade_repo.py
Semester 1 /Fundamentals of programming/ASSIGNMENT 8/src/services/: services.py
Semester 1/ASSIGNMENT 3/: complexity_program.py
Semester 1/ASSIGNMENT 8/src/domain/: grade.py
Semester 1/Fundamentals of programming/ASSIGNMENT 10/: computer_player.py  game.py
Semester 1/Fundamentals of programming/ASSIGNMENT 2/: problem to solve.py
Semester 1/Fundamentals of programming/ASSIGNMENT 4/: backtracking problem.py  dynamic programming problem.py
Semester 1/Fundamentals of programming/ASSIGNMENT 7/src/services/: __init__.py
Semester 1/Fundamentals of programming/ASSIGNMENT 7/src/ui/: __init__.py  expenses.txt
Semester 1/Fundamentals of programming/ASSIGNMENT 8/domain/: discipline.py
Semester 1/Fundamentals of programming/ASSIGNMENT 8/src/domain/: student.py
Semester 1/Fundamentals of programming/ASSIGNMENT 8/src/repository/: student_repo.py
Semester 1/Fundamentals of programming/ASSIGNMENT 8/src/ui/: ui.py
Semester 1/Fundamentals of programming/ASSIGNMENT 8/ui/: start.py
Semester 2/Data structures and algorithms/Assignment 1 - ADT Bag/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  ShortTest.h
Semester 2/Data structures and algorithms/Assignment 2 - ADT SortedIndexedList - SLL/: App.cpp  CMakeLists.txt  ListIterator.cpp  ListIterator.h  ShortTest.cpp  ShortTest.h  SortedIndexeList.cpp  SortedIndexedList.h
Semester 2/Object Oriented Programming/Assignment 1/: CMakeLists.txt  program.c
Semester 2/Object Oriented Programming/Assignment 2-3/: CMakeLists.txt  controller.c  controller.h  domain.c  domain.h  dynamic_vector.c  dynamic_vector.h  main.c  operation_stack.c  operation_stack.h  repository.c  repository.h  ui.c  ui.h
Semester 2/Object Oriented Programming/Assignment 4-5/: CMakeLists.txt
Semester 2/Object Oriented Programming/Assignment 4-5/src/: controller.cpp  controller.h  dynamic_array.cpp  dynamic_array.h  main.cpp  movies.cpp  movies.h  program  repository.cpp  repository.h  tests.cpp  ui.cpp  ui.h  watchlist.cpp  watchlist.h
Semester 2/Object Oriented Programming/Assignment 6-7/: 1.html  1csv  1h  1html  CMakeLists.txt  copy  csv1_use  csv_user  html_user  movies.txt
Semester 2/Object Oriented Programming/Assignment 6-7/src/: controller.cpp  controller.h  dynamic_array.h  exceptions.h  file_repo.cpp  file_repo.h  main.cpp  movies.cpp  movies.h  repository.cpp  repository.h  ui.cpp  ui.h  watchlist.cpp
Semester 2/Object Oriented Programming/Assignment 8-9/: CMakeLists.txt  movies.txt
Semester 2/Object Oriented Programming/Assignment 8-9/src/: 1  controller.cpp  controller.h  dynamic_array.h  exceptions.cpp  file_repo.cpp  file_repo.h  file_writer.cpp  file_writer.h  gui_console.cpp  gui_console.h  main.cpp  movies.cpp  movies.h  repository.h  tests.cpp  tests.h  ui.cpp  ui.h  validator.cpp  validator.h
Semester 2/Object Oriented Programming/Test 1/: CMakeLists.txt  controller.cpp  controller.h  dynamic_vector.h  main.cpp  repository.cpp  repository.h  schools.cpp  schools.h  tests.cpp  tests.h  ui.cpp  ui.h
Semester 2/Object Oriented Programming/Test 2/: CMakeLists.txt  car.cpp  car.h  engine.cpp  engine.h  file  main.cpp  save  service.cpp  service.h  ui.cpp  ui.h
