cmake_minimum_required(VERSION 3.27)
project(oop_a4_5_antoniab16)

set(CMAKE_CXX_STANDARD 14)

add_executable(oop_a4_5_antoniab16
        src/main.cpp
        src/movies.h
        src/movies.cpp
        src/dynamic_array.h
        src/dynamic_array.cpp
        src/repository.cpp
        src/repository.h
        src/ui.h
        src/ui.cpp
        src/controller.h
        src/controller.cpp
        src/tests.h
        src/tests.cpp
        src/watchlist.h
        src/watchlist.cpp)
